Added some example to Swagger
