# note/api/v1/transport/rest/docs/swagger.json
@@ -1,4 +1,8 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "Noterfy Note Service.",
@@ -26,7 +30,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Update a new note.",
+                "summary": "Update an existing note.",
                 "parameters": [
                     {
                         "description": "A body containing the updated note",
@@ -252,27 +256,33 @@
             "properties": {
                 "content": {
                     "description": "Content is the content of the note",
-                    "type": "string"
+                    "type": "string",
+                    "example": "Writing an effective note is hard"
                 },
                 "created_time": {
                     "description": "CreatedTime is the timestamp when the note was created.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2016-02-24 11:12:13"
                 },
                 "id": {
                     "description": "ID is a unique identifier UUID of the note.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "ffffffff-ffff-ffff-ffff-ffffffffffff"
                 },
                 "is_favorite": {
                     "description": "IsFavorite is a flag when then the note is marked as favorite",
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "title": {
                     "description": "Title is the title of the note",
-                    "type": "string"
+                    "type": "string",
+                    "example": "How to Write a Note"
                 },
                 "updated_time": {
                     "description": "UpdateTime is the timestamp when the note last updated.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2016-02-24 11:12:13"
                 }
             }
         },
@@ -302,10 +312,12 @@
                     }
                 },
                 "total_count": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2
                 },
                 "total_page": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 5
                 }
             }
         },
@@ -321,7 +333,8 @@
             "type": "object",
             "properties": {
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Note not found"
                 }
             }
         },
@@ -341,5 +354,11 @@
                 }
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "description": "Use to interact to the Noterfy note service.",
+            "name": "Note API"
+        }
+    ]
 }
